# Superluminal-Jets-Summer2025

./: .gitignore  3dgraphofloglike.py  Gen_data_Velocities.py  Mojave_html_to_csv.py  PyMC_Pytensor_cutoff_testing.py  PyMC_Pytensor_likelihood_model1.1.py  PyMC_Pytensor_likelihood_model1.1_yLOG.py  PyMC_Pytensor_likelihood_model_2.0_noiseAdded.py  PyMC_Pytensor_likelihood_model_old.py  PyMC_Pytensor_likelihood_with_noise.py  PyMC_Pytensor_noise_main.py  PyMC_Pytensor_noise_main_aniso.py  PyMC_Pytensor_noise_main_manualnoise.py  PyMC_Pytensor_noise_v_main.py  PyMC_Pytensor_noise_v_main_loop.py  PyMC_Pytensor_noise_v_main_varsig.py  PyMC_Pytensor_noise_v_main_varsig_aniso.py  PyTensor.exponential(pre-transformed).py  README.md  SimValuesGen(IncludesObsNoise)  Simulation 1.1.nb  Wc_eval1.1  Wc_eval1.1.py  csv.file.imp  csv_file_imp.py  csv_file_imp_v.py  generated_sources.csv  graphofloglike.py  graphofloglike_v.py  graphofloglike_v_testingMOJAVE.py  histogramOfMojave.py  log_likelihood_v_testing.py  loglike_v_testing.py  mkdocs.yml  mojave_cleaned.csv  mojave_cleaned_radec.csv  mojave_radec.csv  pyproject.toml  readme.txt  simulationImport.py
docs/: index.md
graveyard/: PyMC black box MODwithSimdata.py  PyMC_Pytensor_cutoff_testing.py  PyMC_Pytensor_noise_main.py  PyMC_Pytensor_noise_main_aniso.py  PyMC_Pytensor_noise_main_manualnoise.py  PyMC_Pytensor_noise_v_main.py  PyMC_Pytensor_noise_v_main_loop.py  Simulation 1.1.nb  SuperluminalNotesGraphs.py  graphofloglike.py  graphofloglike_v.py  graphofloglike_v_testingMOJAVE.py  histogramOfMojave.py  test.py  testhuge.py  (+2 more)
(+32 files in other folders)
